feat: implement prefix uuid for redoc and client generation
